[gd_scene load_steps=3 format=3 uid="uid://ccq80qlbw0unt"]

[ext_resource type="Script" uid="uid://bt445re376ab1" path="res://src/ui/inventory/map_room.gd" id="1_mgwym"]
[ext_resource type="Texture2D" uid="uid://dacdyimqto28d" path="res://asset/texture/ui/minimap/explore.webp" id="2_bfwdd"]

[node name="MapRoom" type="ColorRect"]
offset_right = 24.0
offset_bottom = 24.0
color = Color(0, 0, 0, 1)
script = ExtResource("1_mgwym")

[node name="ExploreIcon" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bfwdd")
stretch_mode = 3

[node name="RangeArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 6.0
offset_right = -7.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="Center" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
